@@ -56,6 +56,49 @@ class TestPageTemplateFile(unittest.TestCase):
         self.failUnless("supported" in result)
         self.failUnless("some path" in result)
 
+    def test_provider(self):
+        from z3c.pt.pagetemplate import ViewPageTemplateFile
+
+        class Context(object):
+            pass
+
+        class Request(object):
+            response = None
+
+        class View(object):
+            __call__ = ViewPageTemplateFile("provider.pt")
+
+        class Provider(object):
+            def __init__(self, *args):
+                data.extend(list(args))
+
+            def update(self):
+                data.extend("updated")
+
+            def render(self):
+                return """<![CDATA[ %s ]]>""" % repr(data)
+
+        view = View()
+        data = []
+
+        from zope.interface import implementedBy
+        from zope.component import provideAdapter
+        from zope.contentprovider.interfaces import IContentProvider
+
+        provideAdapter(
+            Provider, (
+                implementedBy(Context),
+                implementedBy(Request),
+                implementedBy(View)
+                ),
+            IContentProvider,
+            name="content"
+            )
+
+        result = view(context=Context(), request=Request())
+        self.failUnless(repr(data) in result)
+
+
 def test_suite():
     import sys
     return unittest.findTestCases(sys.modules[__name__])
